# external

./: .gitignore  stack.xml
SerialDevice/: CMakeLists.txt  mainpage.dox  manifest.xml
XMLConfig/: CMakeLists.txt  mainpage.dox  manifest.xml
XMLConfig/include/: XMLConfig.h
XMLConfig/src/: XMLConfig.cc
armadillo/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
